# advent-of-code

./: .gitignore  CMakeLists.txt  step2
day1/: step1.c  step2.c
day2/: step1.c  step2.c
day3/: step1.c  step2.c
day4/: step1.c  step2.c
day6/: step1.c  step2.c
day7/: step1.c  step2.c
day8/: README.md  step1.c  step2.c
